src/LottiePlugin.h

// --------------------------------------------------------------------------

// Log level enum matching industry standards
typedef enum {
    LOTTIE_LOG_NONE = 0,
    LOTTIE_LOG_ERROR = 1,
    LOTTIE_LOG_WARNING = 2,
    LOTTIE_LOG_INFO = 3
} LottieLogLevel;
typedef enum {
    LOTTIE_COLOR_PROPERTY_FILL = 0,
    LOTTIE_COLOR_PROPERTY_STROKE = 1
} LottieColorProperty;
typedef struct lottie_color_override {
    const char* key_path;
    LottieColorProperty property;
    float red;
    float green;
    float blue;
} lottie_color_override;
typedef struct lottie_animation_wrapper {
    lottie_animation_wrapper *self;
    std::unique_ptr<rlottie::Animation> animation;
    double frameRate;
    int64_t totalFrame;
    double duration;
    int64_t width;
    int64_t height;
    LottieLogLevel logLevel;
} lottie_animation_wrapper;
typedef struct lottie_render_data {
    uint32_t *buffer;
    uint32_t width;
    uint32_t height;
    uint32_t bytesPerLine;
#if !defined(__EMSCRIPTEN__)
    std::future<rlottie::Surface> render_future;
    lottie_animation_wrapper* render_pool_owner = nullptr;
    int render_pool_slot = -1;
    uint32_t* external_buffer = nullptr;
    uint32_t external_bytes_per_line = 0;
    bool render_skipped = false;
    void* render_pool_state = nullptr;
#endif
} lottie_render_data;
    EXPORT_API int32_t lottie_load_from_data(
        const char* json_data,
        const char* resource_path,
        lottie_animation_wrapper** animation_wrapper);
    EXPORT_API int32_t lottie_load_from_file(
        const char *file_path,
        lottie_animation_wrapper **animation_wrapper);
    EXPORT_API int32_t lottie_dispose_wrapper(lottie_animation_wrapper **animation_wrapper);
    EXPORT_API int32_t lottie_render_immediately(
        lottie_animation_wrapper* animation_wrapper,
        lottie_render_data* render_data,
        uint32_t frame_number,
        bool keep_aspect_ratio,
        bool convert_bgra_to_rgba);
    EXPORT_API int32_t lottie_render_create_future_async(
        lottie_animation_wrapper* animation_wrapper,
        lottie_render_data* render_data,
        uint32_t frame_number,
        bool keep_aspect_ratio,
        bool convert_bgra_to_rgba);
    EXPORT_API int32_t lottie_render_try_get_future_result(
        lottie_animation_wrapper* animation_wrapper,
        lottie_render_data* render_data,
        int32_t* ready);
    EXPORT_API int32_t lottie_render_get_future_result(
        lottie_animation_wrapper* animation_wrapper,
        lottie_render_data* render_data);
    EXPORT_API int32_t lottie_allocate_render_data(lottie_render_data** render_data);
    EXPORT_API int32_t lottie_dispose_render_data(lottie_render_data** render_data);
    
    EXPORT_API int32_t lottie_set_log_level(
        lottie_animation_wrapper* animation_wrapper,
        LottieLogLevel log_level);
    
    EXPORT_API int32_t lottie_set_global_log_level(LottieLogLevel log_level);
    EXPORT_API int32_t lottie_set_fill_color(
        lottie_animation_wrapper* animation_wrapper,
        const char* key_path,
        float red,
        float green,
        float blue);
    EXPORT_API int32_t lottie_set_stroke_color(
        lottie_animation_wrapper* animation_wrapper,
        const char* key_path,
        float red,
        float green,
        float blue);
    EXPORT_API int32_t lottie_apply_color_overrides(
        lottie_animation_wrapper* animation_wrapper,
        const lottie_color_override* overrides,
        uint32_t override_count);
    // Match Unity's expected render-event callback signature. Now that
    // UNITY_INTERFACE_API is guaranteed to be defined, this typedef parses cleanly
    // on all compilers (MSVC/Clang/GCC/ObjC++).
    typedef void (UNITY_INTERFACE_API *UnityRenderingEvent)(int eventID);
    EXPORT_API void* lottie_create_texture_with_color_space(
        lottie_animation_wrapper* animation,
        int width,
        int height,
        bool prefer_srgb_sampling);
    EXPORT_API void  lottie_destroy_texture(lottie_animation_wrapper* animation, void* tex);
    EXPORT_API void* lottie_get_native_texture_ptr(lottie_animation_wrapper* animation);
    EXPORT_API void  lottie_update_texture(lottie_animation_wrapper* animation);
    EXPORT_API int32_t lottie_supports_native_vulkan_upload(void);
    EXPORT_API int32_t lottie_register_unity_vulkan_texture(
        lottie_animation_wrapper* animation,
        void* native_texture,
        int width,
        int height);
    EXPORT_API int32_t lottie_is_vulkan_upload_available(lottie_animation_wrapper* animation);
    EXPORT_API int32_t lottie_register_unity_opengl_texture(
        lottie_animation_wrapper* animation,
        void* native_texture,
        int width,
        int height);
    EXPORT_API int32_t lottie_is_opengl_upload_available(lottie_animation_wrapper* animation);
    EXPORT_API UnityRenderingEvent lottie_get_render_event_func(void);
    EXPORT_API void lottie_register_webgl_rendering_plugin(void);
    EXPORT_API int32_t lottie_register_unity_webgl_texture(
        lottie_animation_wrapper* animation,
        void* native_texture,
        int width,
        int height);
    EXPORT_API void lottie_unregister_unity_webgl_texture(lottie_animation_wrapper* animation);
    EXPORT_API int32_t lottie_request_webgl_texture_upload(
        lottie_animation_wrapper* animation,
        lottie_render_data* render_data);
    EXPORT_API int32_t lottie_is_webgl_upload_available(lottie_animation_wrapper* animation);
    EXPORT_API UnityRenderingEvent lottie_get_webgl_render_event_func(void);